--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,9 @@ h1 {
 }
 
 @media screen and (max-width: 682px) {
+    *{
+        max-height: 100vh;
+    }
     .logo {
         width: 160px;
     }
