HUGE Login/Register frontend UPDATE!
HTML, CSS and JS of the mecanisms of login/sign, hopefully today or tomorrow I add succesfuly PHP/SQL and encrypt passwords.

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,12 @@ button {
     outline: none;
     cursor: pointer;
 }
-
+button a {
+    color: #fbfcfd;
+    outline: none;
+    cursor: pointer;
+    text-decoration: none;
+}
 .content {
     color: #fbfcfd;
     position: absolute;
