--- a/SignMecanism/sign_mecanism.css
+++ b/SignMecanism/sign_mecanism.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('Nectar/SignMecanism/images/Universe_Background.jpg');
+    background-image: url('Universe_Background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
